--- a/FileExplorer/Controls/FileListViewControl.xaml
+++ b/FileExplorer/Controls/FileListViewControl.xaml
@@ -10,7 +10,6 @@
                  xmlns:dxfui="http://schemas.devexpress.com/winfx/2008/xaml/core/filteringui"
                  xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
                  xmlns:common="clr-namespace:FileExplorer.Core"
-                 xmlns:controls="clr-namespace:FileExplorer.Controls"
                  xmlns:settings="clr-namespace:FileExplorer.Properties"
                  SelectionMode="Row" AutoExpandAllGroups="True" AllowInitiallyFocusedRow="False" ShowLoadingPanel="{Binding IsLoading}" ClipboardCopyMode="None"
                  dx:DXSerializer.StoreLayoutMode="All" dxg:GridSerializationOptions.AddNewColumns="False" dxg:GridSerializationOptions.RemoveOldColumns="False">
@@ -25,9 +24,11 @@
             </Style.Triggers>
         </Style>
         <Style x:Key="FileNameEditStyle" TargetType="dxe:TextEdit">
-            <Setter Property="EditMode" Value="InplaceInactive" />
+            <Setter Property="ShowError" Value="False" />
             <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="TextTrimming" Value="CharacterEllipsis" />
             <Setter Property="EditValue" Value="{Binding Row.Name}" />
+            <Setter Property="ToolTip" Value="{Binding Row.FullName}" />
             <Style.Triggers>
                 <DataTrigger Binding="{Binding View.DataContext.Settings.ShowFileExtensions}" Value="True">
                     <Setter Property="EditValue" Value="{Binding Row.FullName}" />
@@ -131,29 +132,29 @@
             <StackPanel Orientation="Horizontal" DataContext="{Binding RowData}">
                 <dxe:CheckEdit Margin="3,0,0,0" Style="{StaticResource CheckBoxSelectorStyle}" />
                 <Image Width="16" Height="16" Margin="3,0" Source="{Binding Row.SmallIcon, IsAsync=True}" Style="{StaticResource FileIconImageStyle}" />
-                <dxe:TextEdit TextTrimming="CharacterEllipsis" ToolTip="{Binding Row.FullName}" Style="{StaticResource FileNameEditStyle}">
-                    <dxmvvm:Interaction.Behaviors>
-                        <common:TextHighlightingBehavior HighlightedText="{Binding HighlightedText, RelativeSource={RelativeSource AncestorType=controls:FileListViewControl}}" />
-                    </dxmvvm:Interaction.Behaviors>
-                </dxe:TextEdit>
+                <dxe:TextEdit Name="PART_Editor" Style="{StaticResource FileNameEditStyle}" />
             </StackPanel>
         </DataTemplate>
         <ControlTemplate x:Key="{dxgt:GridCardThemeKey ResourceKey=ContainerTemplate}" TargetType="{x:Type ContentControl}">
             <ContentPresenter />
         </ControlTemplate>
+        <ControlTemplate x:Key="FocusedRowBorderTemplate">
+            <Border BorderThickness="1" BorderBrush="{dxi:ThemeResource {dxgt:GridRowThemeKey ResourceKey=BorderFocusedBrush}}" />
+        </ControlTemplate>
+        <ControlTemplate x:Key="FocusedCardBorderTemplate" />
         <dxg:TableView x:Key="ListView" AllowEditing="False" AllowMergedGrouping="True" AllowConditionalFormattingMenu="True"
                        AllowDragDrop="True" AllowSortedDataDragDrop="True" DragDropHintTemplate="{StaticResource DragDropHintTemplate}"
                        ShowFocusedRectangle="False" ShowFixedTotalSummary="True" ShowGroupPanel="False" ShowGroupedColumns="True"
                        ColumnFilterPopupMode="Excel" FilterEditorShowOperandTypeIcon="True"
                        ShowAutoFilterRow="True" AutoFilterRowPosition="Header" AutoFilterRowClearButtonMode="Always"
-                       ShowSearchPanelMode="Never" SearchColumns="Name;Extension" ShowSearchPanelResultInfo="True" ShowSearchPanelMRUButton="True"
+                       ShowSearchPanelMode="Never" SearchColumns="Name;Extension" ShowSearchPanelResultInfo="True" ShowSearchPanelMRUButton="True" IncrementalSearchMode="Enabled"
                        HighlightItemOnHover="True" ClipboardMode="Formatted" ClipboardCopyOptions="All"
                        ShowVerticalLines="False" ShowHorizontalLines="False" VerticalScrollbarVisibility="Auto" AutoWidth="True"
                        AllowCascadeUpdate="{Binding Virtualization, Source={x:Static settings:Settings.Default}}"
                        ShowIndicator="{DXBinding 'Settings.ShowRowNumbers and Layout==$common:Layout.Details'}"
                        IndicatorWidth="{DXBinding '(@a($dxg:GridControl).VisibleRowCount.ToString().Length * 6) + 12'}"                                   
                        EditFormPostConfirmation="None" EditFormPostMode="Immediate" NavigationStyle="Row"
-                       ShowEditFormOnDoubleClick="False" ShowEditFormOnEnterKey="False" ShowEditFormOnF2Key="False"
+                       ShowEditFormOnDoubleClick="False" ShowEditFormOnEnterKey="False" ShowEditFormOnF2Key="False" FocusedRowBorderTemplate="{StaticResource FocusedRowBorderTemplate}"
                        EditFormTemplate="{StaticResource EditFormTemplate}" EditFormShowMode="{Binding CurrentItem.Parent.IsRoot, RelativeSource={RelativeSource AncestorType=dxg:GridControl}, Converter={common:BooleanToEditFormShowModeConverter Inverse=True}}">
             <dxmvvm:Interaction.Behaviors>
                 <common:CustomColumnBehavior />
@@ -187,9 +188,9 @@
                       AllowDragDrop="True" AllowSortedDataDragDrop="True" DragDropHintTemplate="{StaticResource DragDropHintTemplate}"
                       ShowFocusedRectangle="False" ShowFixedTotalSummary="True" ShowGroupPanel="False" ShowGroupedColumns="True"
                       ColumnFilterPopupMode="Excel" FilterEditorShowOperandTypeIcon="True"
-                      ShowSearchPanelMode="Never" SearchColumns="Name;Extension" ShowSearchPanelResultInfo="True" ShowSearchPanelMRUButton="True"
+                      ShowSearchPanelMode="Never" SearchColumns="Name;Extension" ShowSearchPanelResultInfo="True" ShowSearchPanelMRUButton="True" IncrementalSearchMode="Enabled"
                       ScrollViewer.IsDeferredScrollingEnabled="True" EnableImmediatePosting="True" NavigationStyle="Row"
-                      SeparatorThickness="0" CardMargin="0" Style="{StaticResource CardViewStyle}">
+                      SeparatorThickness="0" CardMargin="0" Style="{StaticResource CardViewStyle}" FocusedCardBorderTemplate="{StaticResource FocusedCardBorderTemplate}">
             <dxmvvm:Interaction.Behaviors>
                 <common:CustomColumnBehavior />
                 <common:AllowDragDropBehavior />
@@ -201,14 +202,14 @@
                           AllowDragDrop="True" AllowSortedDataDragDrop="True" DragDropHintTemplate="{StaticResource DragDropHintTemplate}"                                    
                           ShowFocusedRectangle="False" ShowFixedTotalSummary="True"
                           ColumnFilterPopupMode="Excel" FilterEditorShowOperandTypeIcon="True" ShowAutoFilterRow="True" AutoFilterRowPosition="Header" AutoFilterRowClearButtonMode="Always"
-                          ShowSearchPanelMode="Never" SearchColumns="Name;Extension" ShowSearchPanelResultInfo="True" ShowSearchPanelMRUButton="True"
+                          ShowSearchPanelMode="Never" SearchColumns="Name;Extension" ShowSearchPanelResultInfo="True" ShowSearchPanelMRUButton="True" IncrementalSearchMode="Enabled"
                           ShowIndicator="False" NavigationStyle="Row" HighlightItemOnHover="True" ClipboardMode="Formatted" ClipboardCopyOptions="All"
                           ShowVerticalLines="False" ShowHorizontalLines="False" VerticalScrollbarVisibility="Auto" AutoWidth="True"
                           AllowCascadeUpdate="{Binding Virtualization, Source={x:Static settings:Settings.Default}}"
                           TreeDerivationMode="ChildNodesSelector" ChildNodesPath="Content" AllowChildNodeSourceUpdates="True"
                           HasChildNodesPath="IsDirectory" FetchSublevelChildrenOnExpand="False" PrintExpandButtons="False"
                           EditFormPostConfirmation="None" EditFormPostMode="Immediate"
-                          ShowEditFormOnDoubleClick="False" ShowEditFormOnEnterKey="False" ShowEditFormOnF2Key="False"
+                          ShowEditFormOnDoubleClick="False" ShowEditFormOnEnterKey="False" ShowEditFormOnF2Key="False" FocusedRowBorderTemplate="{StaticResource FocusedRowBorderTemplate}"
                           EditFormTemplate="{StaticResource EditFormTemplate}" EditFormShowMode="{Binding CurrentItem.Parent.IsRoot, RelativeSource={RelativeSource AncestorType=dxg:GridControl}, Converter={common:BooleanToEditFormShowModeConverter Inverse=True}}">
             <dxmvvm:Interaction.Behaviors>
                 <common:CustomColumnBehavior />
@@ -267,8 +268,6 @@
     <dxmvvm:Interaction.Behaviors>
         <common:FileModelSortBehavior />
         <common:FileModelGroupBehavior />
-        <common:MouseEventToCommand MouseButton="Left" Event="PreviewMouseDown" ModifierKeys="Ctrl" PassEventArgsToCommand="True"
-                                    MarkRoutedEventsAsHandled="True" Command="{Binding OpenInNewTabCommand}" EventArgsConverter="{dx:EventArgsToDataRowConverter}" />
         <common:MouseEventToCommand MouseButton="Middle" Event="PreviewMouseDown" PassEventArgsToCommand="True" 
                                     MarkRoutedEventsAsHandled="True" Command="{Binding OpenInNewTabCommand}" EventArgsConverter="{dx:EventArgsToDataRowConverter}" />
         <common:MouseEventToCommand MouseButton="XButton1" Event="PreviewMouseDown" PassEventArgsToCommand="True" 
@@ -282,11 +281,7 @@
                         Header="{Binding Name, Source={StaticResource ResourceProvider}}" CellDisplayTemplateSelector="{StaticResource NameCellDisplayTemplateSelector}">
             <dxg:GridColumn.CellDisplayTemplate>
                 <DataTemplate>
-                    <dxe:TextEdit TextTrimming="CharacterEllipsis" ToolTip="{Binding Row.FullName}" Style="{StaticResource FileNameEditStyle}">
-                        <dxmvvm:Interaction.Behaviors>
-                            <common:TextHighlightingBehavior HighlightedText="{Binding HighlightedText, RelativeSource={RelativeSource AncestorType=controls:FileListViewControl}}" />
-                        </dxmvvm:Interaction.Behaviors>
-                    </dxe:TextEdit>
+                    <dxe:TextEdit Name="PART_Editor" Style="{StaticResource FileNameEditStyle}" />
                 </DataTemplate>
             </dxg:GridColumn.CellDisplayTemplate>
             <dxg:GridColumn.EditFormTemplate>
@@ -313,8 +308,8 @@
                 </DataTemplate>
             </dxg:GridColumn.EditFormTemplate>
         </dxg:GridColumn>
-        <dxg:GridColumn FieldName="Description" Header="{Binding Type, Source={StaticResource ResourceProvider}}" SortMode="Custom" SortFieldName="Extension" AllowAutoFilter="False" />
-        <dxg:GridColumn FieldName="Extension" Header="{Binding Extension, Source={StaticResource ResourceProvider}}" SortMode="Custom" Visible="False" AllowAutoFilter="False">
+        <dxg:GridColumn FieldName="Description" Header="{Binding Type, Source={StaticResource ResourceProvider}}" SortMode="Custom" SortFieldName="Extension" AllowAutoFilter="False" AllowIncrementalSearch="False" />
+        <dxg:GridColumn FieldName="Extension" Header="{Binding Extension, Source={StaticResource ResourceProvider}}" SortMode="Custom" Visible="False" AllowAutoFilter="False" AllowIncrementalSearch="False">
             <dxg:GridColumn.PredefinedFilters>
                 <dxfui:PredefinedFilterCollection>
                     <dxfui:PredefinedFilter Name="Image" Filter="?p IN ('.BMP','.PNG','.JPG','.JPEG','.GIF','.ICO','.SVG','.TIF','.TIFF','.PSD')" />
@@ -326,10 +321,10 @@
                 </dxfui:PredefinedFilterCollection>
             </dxg:GridColumn.PredefinedFilters>
         </dxg:GridColumn>
-        <dxg:GridColumn FieldName="ParentName" Header="{Binding ParentName, Source={StaticResource ResourceProvider}}" SortMode="Custom" Visible="False" AllowAutoFilter="False" />
-        <dxg:GridColumn FieldName="ParentPath" Header="{Binding ParentPath, Source={StaticResource ResourceProvider}}" SortMode="Custom" Visible="False" AllowAutoFilter="False" />
-        <dxg:GridColumn FieldName="FullPath" Header="{Binding Path, Source={StaticResource ResourceProvider}}" SortMode="Custom" Visible="False" AllowAutoFilter="False" />
-        <dxg:GridColumn FieldName="Size" Header="{Binding Size, Source={StaticResource ResourceProvider}}" SortMode="Custom" AllowAutoFilter="False"
+        <dxg:GridColumn FieldName="ParentName" Header="{Binding ParentName, Source={StaticResource ResourceProvider}}" SortMode="Custom" Visible="False" AllowAutoFilter="False" AllowIncrementalSearch="False" />
+        <dxg:GridColumn FieldName="ParentPath" Header="{Binding ParentPath, Source={StaticResource ResourceProvider}}" SortMode="Custom" Visible="False" AllowAutoFilter="False" AllowIncrementalSearch="False" />
+        <dxg:GridColumn FieldName="FullPath" Header="{Binding Path, Source={StaticResource ResourceProvider}}" SortMode="Custom" Visible="False" AllowAutoFilter="False" AllowIncrementalSearch="False" />
+        <dxg:GridColumn FieldName="Size" Header="{Binding Size, Source={StaticResource ResourceProvider}}" SortMode="Custom" AllowAutoFilter="False" AllowIncrementalSearch="False"
                         Binding="{Binding Size, Converter={common:IntToFileSizeConverter}}" CellTemplateSelector="{StaticResource FileSizeTemplateSelector}">
             <dxg:GridColumn.PredefinedFilters>
                 <dxfui:PredefinedFilterCollection>
@@ -343,17 +338,17 @@
                 </dxfui:PredefinedFilterCollection>
             </dxg:GridColumn.PredefinedFilters>
         </dxg:GridColumn>
-        <dxg:GridColumn FieldName="DateCreated" Header="{Binding DateCreated, Source={StaticResource ResourceProvider}}" SortMode="Custom" AllowAutoFilter="False">
+        <dxg:GridColumn FieldName="DateCreated" Header="{Binding DateCreated, Source={StaticResource ResourceProvider}}" SortMode="Custom" AllowAutoFilter="False" AllowIncrementalSearch="False">
             <dxg:GridColumn.EditSettings>
                 <dxe:TextEditSettings DisplayFormat="{Binding DateTimeFormatString, Mode=TwoWay, Source={x:Static settings:Settings.Default}}" />
             </dxg:GridColumn.EditSettings>
         </dxg:GridColumn>
-        <dxg:GridColumn FieldName="DateModified" Header="{Binding DateModified, Source={StaticResource ResourceProvider}}" SortMode="Custom" AllowAutoFilter="False">
+        <dxg:GridColumn FieldName="DateModified" Header="{Binding DateModified, Source={StaticResource ResourceProvider}}" SortMode="Custom" AllowAutoFilter="False" AllowIncrementalSearch="False">
             <dxg:GridColumn.EditSettings>
                 <dxe:TextEditSettings DisplayFormat="{Binding DateTimeFormatString, Mode=TwoWay, Source={x:Static settings:Settings.Default}}" />
             </dxg:GridColumn.EditSettings>
         </dxg:GridColumn>
-        <dxg:GridColumn FieldName="DateAccessed" Header="{Binding DateAccessed, Source={StaticResource ResourceProvider}}" SortMode="Custom" Visible="False" AllowAutoFilter="False">
+        <dxg:GridColumn FieldName="DateAccessed" Header="{Binding DateAccessed, Source={StaticResource ResourceProvider}}" SortMode="Custom" Visible="False" AllowAutoFilter="False" AllowIncrementalSearch="False">
             <dxg:GridColumn.EditSettings>
                 <dxe:TextEditSettings DisplayFormat="{Binding DateTimeFormatString, Mode=TwoWay, Source={x:Static settings:Settings.Default}}" />
             </dxg:GridColumn.EditSettings>
