--- a/FileExplorer/View/MainView.xaml
+++ b/FileExplorer/View/MainView.xaml
@@ -13,10 +13,9 @@
         <common:ActiveWindowService />
     </dxmvvm:Interaction.Behaviors>
 
-    <dx:DXTabControl Padding="0" TabContentCacheMode="CacheAllTabs">
+    <dx:DXTabControl x:Name="TabControl" Padding="0" TabContentCacheMode="CacheAllTabs">
         <dxmvvm:Interaction.Behaviors>
             <dx:TabbedWindowDocumentUIService ShowNewItemOnStartup="False" />
-            <dxmvvm:KeyToCommand KeyGesture="Ctrl+T" Command="{Binding CreateNewTabCommand}" />
         </dxmvvm:Interaction.Behaviors>
         <dx:DXTabControl.ItemHeaderTemplate>
             <DataTemplate>
@@ -75,5 +74,14 @@
             </dx:TabControlStretchView>
         </dx:DXTabControl.View>
     </dx:DXTabControl>
+
+    <dx:DXTabbedWindow.InputBindings>
+        <KeyBinding Gesture="Ctrl+T" Command="{Binding CreateNewTabCommand}" />
+        <KeyBinding Gesture="Alt+Left" Command="{Binding SelectedItemContent.DataContext.MoveBackCommand, ElementName=TabControl}" />
+        <KeyBinding Gesture="Alt+Right" Command="{Binding SelectedItemContent.DataContext.MoveNextCommand, ElementName=TabControl}" />
+        <KeyBinding Gesture="Alt+Up" Command="{Binding SelectedItemContent.DataContext.MoveUpCommand, ElementName=TabControl}" />
+        <KeyBinding Gesture="Ctrl+R" Command="{Binding SelectedItemContent.DataContext.RefreshCommand, ElementName=TabControl}" />
+        <KeyBinding Key="F5" Command="{Binding SelectedItemContent.DataContext.RefreshCommand, ElementName=TabControl}" />
+    </dx:DXTabbedWindow.InputBindings>
 
 </dx:DXTabbedWindow>
